styles/main.css
:root {
  --background:rgba(0, 0, 0, 0.623);
}

#foo {
  color: var(--background);
}

* {
  max-width: 100%;
  max-height: 100%;
  box-sizing: border-box;
  color: white;
  font-family: "Baskervville";
}

body {
  font-weight: 400;
  font-style: normal;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-image: linear-gradient(to  right, #0DA4F3, #363771);
  padding-bottom: 80px;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 700;
  font-style: normal;
  display:flex;
}

#header-logo {
  text-align: center;
  padding: 15px 0;
  background-color: black;
}

#header-contact-mobile-nav {
  /* grid-area: header-contact-mobile-nav; */
  background-color:#262320;
  display:flex;
  justify-content: space-between;
  align-items: center;
}

#mobile-nav {
  color: white;
  padding: 01.5em;
  cursor: pointer;
  /* display:flex; */
}
.fa-solid{
  position: absolute;
  right: 2%;
  /* display:flex; */
}

#header-bottom-nav {
  grid-area: header-bottom-nav;
  background-color: black;
}

#header-bottom-nav ul {
  border-top: 1px solid 
lightgrey;
  /* background-color: red; */
  display: none;
  align-items: flex-start;
  flex-direction: column;
}

#header-bottom-nav ul li {
  border-bottom: 1px solid 
lightgrey;
  width: 100%;
}

#header-bottom-nav ul li a {
/*   background-color: yellow; */
  color: white;
  display: flex;

  font-size: 1.2em;
  border-bottom: 0.25em solid transparent;

  /* padding: 20px; */
  width: 100%;
}

#header-bottom-nav ul li a:hover,
#header-bottom-nav ul li a.active{
  color: 
deepskyblue;
}

#picture{
  float: left;
  background-color:#262320 ;
  max-width: 100%; /* Ensures the image doesn't exceed its container's width */
  height: auto;    /* Maintains the aspect ratio by adjusting height proportionally */
  display: block;
  display: flex;
  height: 48px;
  border: solid;
  color: white;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
}
#title{
  color: white;
  position: absolute;
  /* display: flex; */
  left: 50px;
  border-style: solid;
  padding: 11.5px;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  font-size: larger;
}
p{
  color: white;
}

footer{
    position: fixed;
    bottom: 0;
    width: 100%;
    background-color: #262320;
    text-align: center;
    padding: 1em 0;
}

#footer_text{
    color: white;
}
#sorry{
  color: white;
  border: solid white;
  display: inline-block;
  padding: 5px;
  position: absolute;
  left: 50px;
  background-color: #262320;
  border-radius: 5px;
}
#buttons{
  position: relative;
  left: 50px;
  top: 50px;
  color: white;
  border: solid white;
  background-color: #262320;
  border-radius: 5px;
  box-shadow: 10px 10px 10px rgba(255, 0, 0, 0.674);
}
p {
  color: 
white;
  margin: 1em 0; /* Add space above and below paragraph */
  line-height: 1.25em;
  
}
.hero {
  background-image: url(/images_main/3d-render-laptop-notebook-electronic-device-with-illuminated-with-neon-light_204298-982.jpg);
  height: 500px;
  background-position: 50% 50%;
  background-repeat: no-repeat;
  background-size: 500px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  color: #fff;
  padding: 0 20px;
  
}

.hero h1 {
  font-size: 2.5rem;
  margin-bottom: 20px;
  background-color: var(--background);
  border:solid;
  border-radius: 5px;
  padding: 20px;
  /* box-shadow: 10px 10px 10px rgba(255, 0, 0, 0.674); */
}

.hero p {
  font-size: 1.5rem;
  margin-bottom: 30px;
  background-color: var(--background);
  border:solid;
  border-radius: 5px;
  padding: 5px;
  /* box-shadow: 10px 10px 10px rgba(255, 0, 0, 0.674); */
}
#about_us{
  font-size: 20px;
  margin: 30px;
  background-color: var(--background);
  border:solid;
  border-radius: 5px;
  padding: 10px;
  /* text-indent: 2em; */
  text-align: center;
  box-shadow: 10px 10px 10px rgba(255, 0, 0, 0.674);
}
#about_us_btn{
  background-color: var(--background);
  border:solid;
  border-radius: 5px;
  padding: 5px;
  display: block;
  margin: 0 auto;
  box-shadow: 5px 5px 10px rgba(255, 0, 0, 0.674);
}

.btn-primary {
  background-color: var(--background);
  padding: 10px 20px;
  border:solid;
  border-radius: 5px;
  text-decoration: none;
  font-weight: bold;
  transition: all 0.3s ease-in-out;
  /* box-shadow: 10px 10px 10px rgba(255, 0, 0, 0.674); */
}

.btn-primary:hover {
  background-color: #333;
  color: #fff;
}
#video{
  border: solid;
  border-radius: 5px;
  margin: 5px 5px;
  max-width: 95%;
  max-height: .95%;
  display: block;
  margin: 0 auto;
  box-shadow: 10px 10px 10px rgba(255, 0, 0, 0.674);
}
#company_titles{
  border: white solid;
  border-radius: 5px;
  background-color: var(--background);
  max-width: 60%;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}
.company_logos{
  width: 150px;
  height: 150px;
  border: black solid;
  border-radius: 5px;
  background-color: white;
}
table{
  margin-left: auto;
  margin-right: auto;
}
#news{
  border: white solid;
  border-radius: 5px;
  background-color: var(--background);
  max-width: 60%;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

